# request_casting

./: .gitignore  README.md  pyproject.toml  request_casting.epj
.github/workflows/: django.yml
django_test/: db.sqlite3
django_test/django_test/: asgi.py  settings.py  urls.py  wsgi.py
django_test/testme/: apps.py  models.py  serializers.py  tests.py  views.py
django_test/testme/management/commands/: coverage.py
django_test/testme/migrations/: 0001_initial.py  0002_posts.py
request_casting/: __init__.py  poethepoet.py  request_casting.py
request_casting/locale/: es.po  request_casting.pot
request_casting/locale/es/LC_MESSAGES/: request_casting.mo
